# pierwszeKolokwiumPP

./: CMakeLists.txt  README.txt  kolakotprot.cpp  kolbident.cpp  kolcczynnikiisilnia.cpp  koldrzymskanumeracja.cpp  kolfmaksymalnasuma.cpp  kolgodwr.cpp  kolhdzielnywojownik.cpp  kolizbierbut.cpp  koljkochamstringi.cpp
