cmake_minimum_required(VERSION 3.8)
project(pierwszeKolokwiumPP)

set(CMAKE_CXX_STANDARD 11)

add_executable(kA kolakotprot.cpp)
add_executable(kB kolbident.cpp)
add_executable(kC kolcczynnikiisilnia.cpp)
add_executable(kG kolgodwr.cpp)
add_executable(kH kolhdzielnywojownik.cpp)
add_executable(kI kolizbierbut.cpp)
add_executable(kJ koljkochamstringi.cpp)
